[package]
name = "es"
version = "0.1.0"
edition = "2021"

[dependencies]
busrt = { version = "0.4.5", features = ["rpc", "ipc"] }
eva-common = { version = "0.3.1", features = ["bus-rpc"] }
eventlog = "0.2.2"
log = "0.4.19"
tokio = { version = "1.28.2", features = ["full"] }
windows-service = "0.6.0"
